--- a/index.html
+++ b/index.html
@@ -11,76 +11,76 @@
 <style>
 * { margin:0; padding:0; box-sizing:border-box; }
 html { scroll-behavior: smooth; font-family: Arial, sans-serif; }
-body { scroll-snap-type: y mandatory; overflow-y: scroll; background:#e6f0fa; }
+body { scroll-snap-type: y mandatory; overflow-y: scroll; background:#f2f6fc; color:#1c1c1c; }
 a { text-decoration: none; color: inherit; }
 .container { width: 90%; margin: auto; max-width: 1200px; }
 
-header { position: fixed; top:0; width:100%; background: rgba(255,255,255,0.95); z-index:1000; box-shadow:0 2px 8px rgba(0,0,0,0.1); backdrop-filter: blur(5px); }
+header { position: fixed; top:0; width:100%; background: #003580; z-index:1000; box-shadow:0 2px 8px rgba(0,0,0,0.1); }
 .navbar { display: flex; justify-content: space-between; align-items: center; padding: 1rem 0; }
 .nav-links { list-style: none; display: flex; gap: 1rem; }
-.nav-links a { padding: 0.5rem 1rem; transition: 0.3s; color:#003366; font-weight:500; }
-.nav-links a:hover { color: #0055aa; }
+.nav-links a { padding: 0.5rem 1rem; transition: 0.3s; color:#fff; font-weight:500; }
+.nav-links a:hover { color: #00a8ff; }
 .nav-toggle { display: none; font-size: 1.5rem; background: none; border: none; cursor:pointer; }
 
 section { min-height:100vh; scroll-snap-align:start; display:flex; justify-content:center; align-items:center; position:relative; opacity:0; transform:translateY(50px); transition: all 1s ease; overflow:hidden; }
 
-.wave-bg { position:absolute; bottom:0; left:0; width:200%; height:200px; background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="%23003366" fill-opacity="0.2" d="M0,192L60,197.3C120,203,240,213,360,197.3C480,181,600,139,720,144C840,149,960,203,1080,208C1200,213,1320,171,1380,149.3L1440,128L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>'); background-repeat: repeat-x; animation: waveMove 10s linear infinite; z-index:-1; }
+.wave-bg { position:absolute; bottom:0; left:0; width:200%; height:200px; background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="%23003580" fill-opacity="0.2" d="M0,192L60,197.3C120,203,240,213,360,197.3C480,181,600,139,720,144C840,149,960,203,1080,208C1200,213,1320,171,1380,149.3L1440,128L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>'); background-repeat: repeat-x; animation: waveMove 10s linear infinite; z-index:-1; }
 @keyframes waveMove { 0% { transform: translateX(0); } 100% { transform: translateX(-50%); } }
 
 .hero { color:#fff; text-align:center; overflow:hidden; }
 .hero-bg { position:absolute; top:0; left:0; width:100%; height:100%; background: url('https://source.unsplash.com/1600x900/?hotel,blue') center/cover no-repeat; z-index:-3; filter: brightness(0.5); }
-.hero-overlay { content:""; position:absolute; top:0; left:0; width:100%; height:100%; background: linear-gradient(135deg, rgba(0,102,204,0.5), rgba(0,153,255,0.3)); z-index:-2; }
+.hero-overlay { content:""; position:absolute; top:0; left:0; width:100%; height:100%; background: linear-gradient(135deg, rgba(0,168,255,0.5), rgba(0,168,255,0.3)); z-index:-2; }
 
 .hero-content { position: relative; z-index:1; }
-.hero-content h1 { font-size: 3rem; margin-bottom:1rem; background: linear-gradient(90deg, #66ccff, #003366, #3399ff); -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: textGlow 5s ease-in-out infinite; }
-.hero-content p { font-size: 1.2rem; margin-bottom: 1rem; color:#cce6ff; }
+.hero-content h1 { font-size: 3rem; margin-bottom:1rem; background: linear-gradient(90deg, #003580, #00a8ff); -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: textGlow 5s ease-in-out infinite; }
+.hero-content p { font-size: 1.2rem; margin-bottom: 1rem; color:#1c1c1c; }
 
 .popular-cities { display:flex; flex-wrap:wrap; justify-content:center; gap:10px; margin-bottom:15px; }
-.city-btn { padding:8px 15px; border:none; border-radius:6px; background: linear-gradient(90deg, #66ccff, #003366); color:#fff; cursor:pointer; transition:0.3s; font-weight:500; }
-.city-btn:hover { background: linear-gradient(90deg, #3399ff, #001f4d); transform: scale(1.05); }
+.city-btn { padding:8px 15px; border:none; border-radius:6px; background: #003580; color:#fff; cursor:pointer; transition:0.3s; font-weight:500; }
+.city-btn:hover { background: #00a8ff; transform: scale(1.05); }
 
-.btn { background: #003366; color: #fff; padding: 0.8rem 1.5rem; border:none; cursor:pointer; font-size: 1rem; border-radius:5px; transition:0.3s; }
-.btn:hover { background:#0055aa; }
+.btn { background: #003580; color: #fff; padding: 0.8rem 1.5rem; border:none; cursor:pointer; font-size: 1rem; border-radius:5px; transition:0.3s; }
+.btn:hover { background:#00a8ff; }
 .btn-pulse { animation: pulse 2s infinite; }
 @keyframes pulse { 0%{transform:scale(1);} 50%{transform:scale(1.08);} 100%{transform:scale(1);} }
 @keyframes textGlow { 0% { background-position:0% 50%; } 50% { background-position:100% 50%; } 100% { background-position:0% 50%; } }
-.dynamic-text { background: linear-gradient(90deg, #66ccff, #3399ff, #003366); -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: textGlow 5s ease-in-out infinite; font-weight:bold; }
+.dynamic-text { background: linear-gradient(90deg, #003580, #00a8ff); -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: textGlow 5s ease-in-out infinite; font-weight:bold; }
 
-.hotels { background:#cce0ff; flex-direction:column; padding-top:50px; }
-.hotels h2 { background: linear-gradient(90deg, #66ccff, #003366); -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: textGlow 5s ease-in-out infinite; margin-bottom:1rem; }
+.hotels { background:#f2f6fc; flex-direction:column; padding-top:50px; }
+.hotels h2 { background: linear-gradient(90deg, #003580, #00a8ff); -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: textGlow 5s ease-in-out infinite; margin-bottom:1rem; }
 .hotel-grid { display:grid; gap:2rem; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); width:100%; max-width:1200px; margin:auto; }
-.hotel-card { border-radius:8px; overflow:hidden; box-shadow:0 2px 12px rgba(0,0,0,0.1); text-align:center; background:#e6f0fa; transition: transform 0.3s; }
+.hotel-card { border-radius:8px; overflow:hidden; box-shadow:0 2px 12px rgba(0,0,0,0.1); text-align:center; background:#ffffff; transition: transform 0.3s; }
 .hotel-card:hover { transform: translateY(-10px); }
 .hotel-card img { width:100%; height:200px; object-fit: cover; }
-.hotel-card h3 { margin:1rem 0 0.5rem; color:#003366; }
-.hotel-card p { margin-bottom:0.5rem; color:#0055aa; }
+.hotel-card h3 { margin:1rem 0 0.5rem; color:#003580; }
+.hotel-card p { margin-bottom:0.5rem; color:#00a8ff; }
 .hotel-card .btn-book { margin-bottom:1rem; }
 
-.about { background:#99c2ff; flex-direction:column; }
-.about h2 { background: linear-gradient(90deg, #66ccff, #003366); -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: textGlow 5s ease-in-out infinite; }
-.about p { text-align:center; max-width:800px; margin:auto; color:#003366; line-height:1.6; }
+.about { background:#f2f6fc; flex-direction:column; }
+.about h2 { background: linear-gradient(90deg, #003580, #00a8ff); -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: textGlow 5s ease-in-out infinite; }
+.about p { text-align:center; max-width:800px; margin:auto; color:#1c1c1c; line-height:1.6; }
 
-.contact { background:#66a3ff; flex-direction:column; }
-.contact h2 { background: linear-gradient(90deg, #66ccff, #003366); -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: textGlow 5s ease-in-out infinite; }
+.contact { background:#f2f6fc; flex-direction:column; }
+.contact h2 { background: linear-gradient(90deg, #003580, #00a8ff); -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: textGlow 5s ease-in-out infinite; }
 .contact form { display:flex; flex-direction: column; gap:1rem; max-width:600px; margin:auto; }
-.contact input, .contact textarea { padding:0.8rem; border:1px solid #003366; border-radius:4px; width:100%; }
+.contact input, .contact textarea { padding:0.8rem; border:1px solid #003580; border-radius:4px; width:100%; }
 .contact textarea { resize: vertical; min-height:120px; }
 
-footer { text-align:center; padding:1rem; background:#003366; color:#fff; }
+footer { text-align:center; padding:1rem; background:#003580; color:#fff; }
 
-.agoda-searchbox { max-width: 600px; margin: 20px auto; padding: 15px; background: rgba(0,51,102,0.9); border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.2); }
-.agoda-searchbox input, .agoda-searchbox select { width: calc(50% - 10px); margin: 5px; padding: 10px; border: none; border-radius: 6px; font-size: 1rem; }
-.agoda-searchbox button { width: 100%; margin-top: 10px; padding: 12px; background: linear-gradient(90deg, #66ccff, #003366); color: #fff; border: none; border-radius: 6px; font-size: 1rem; cursor: pointer; transition: 0.3s; }
-.agoda-searchbox button:hover { background: linear-gradient(90deg, #3399ff, #001f4d); }
+.agoda-searchbox { max-width: 600px; margin: 20px auto; padding: 15px; background: #ffffff; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.2); }
+.agoda-searchbox input, .agoda-searchbox select { width: calc(50% - 10px); margin: 5px; padding: 10px; border: 1px solid #003580; border-radius: 6px; font-size: 1rem; }
+.agoda-searchbox button { width: 100%; margin-top: 10px; padding: 12px; background: #003580; color: #fff; border: none; border-radius: 6px; font-size: 1rem; cursor: pointer; transition: 0.3s; }
+.agoda-searchbox button:hover { background: #00a8ff; }
 
-#scrollUp { position: fixed; bottom: 30px; right: 30px; background: linear-gradient(90deg, #66ccff, #003366); color: #fff; border: none; border-radius: 50%; width: 50px; height: 50px; font-size: 1.5rem; cursor: pointer; display: none; align-items: center; justify-content: center; z-index: 1000; box-shadow: 0 4px 12px rgba(0,0,0,0.2); transition: transform 0.3s; }
-#scrollUp:hover { transform: scale(1.1); }
+#scrollUp { position: fixed; bottom: 30px; right: 30px; background: #003580; color: #fff; border: none; border-radius: 50%; width: 50px; height: 50px; font-size: 1.5rem; cursor: pointer; display: none; align-items: center; justify-content: center; z-index: 1000; box-shadow: 0 4px 12px rgba(0,0,0,0.2); transition: transform 0.3s; }
+#scrollUp:hover { background:#00a8ff; transform: scale(1.1); }
 
 @media(max-width:768px){
   .nav-toggle { display:block; }
-  .nav-links { display:none; flex-direction: column; gap:0; background:#fff; position:absolute; top:100%; right:0; width:200px; box-shadow:0 2px 8px rgba(0,0,0,0.1); }
+  .nav-links { display:none; flex-direction: column; gap:0; background:#003580; position:absolute; top:100%; right:0; width:200px; box-shadow:0 2px 8px rgba(0,0,0,0.1); }
   .nav-links.show { display:flex; }
-  .nav-links a { padding:1rem; border-bottom:1px solid #eee; }
+  .nav-links a { padding:1rem; border-bottom:1px solid #00a8ff; color:#fff; }
   .agoda-searchbox input, .agoda-searchbox select { width: 100%; margin: 5px 0; }
   .popular-cities { flex-direction: column; }
 }
@@ -90,7 +90,7 @@ footer { text-align:center; padding:1rem; background:#003366; color:#fff; }
 
 <header>
   <div class="container navbar">
-    <a href="#" class="logo" style="color:#003366; font-weight:bold;">Hotelify</a>
+    <a href="#" class="logo" style="color:#fff; font-weight:bold;">Hotelify</a>
     <ul class="nav-links">
       <li><a href="#hero">Home</a></li>
       <li><a href="#hotels">Hotels</a></li>
@@ -248,4 +248,6 @@ document.querySelectorAll('.city-btn').forEach(btn=>{
     heroSearch.show("agoda_searchbox_hero");
   });
 });
-</script
+</script>
+</body>
+</html>
